--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "xlsx": "^0.17.0",
     "yargs": "^17.3.0"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "imjwang",
+  "license": "MIT"
 }
