--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "xlsx": "^0.17.0",
-    "yargs": "^17.3.0"
+    "yargs": "^17.3.0",
+    "progress": "^2.0.3"
   },
   "author": "imjwang",
   "license": "MIT"
